syntax = "proto3";

package com.jackpf.locationhistory;

option java_multiple_files = true;

enum LocationAccuracyRequest {
  BALANCED = 0;
  HIGH = 1;
}

/* Request a location update */
message LocationNotification {
    LocationAccuracyRequest request_accuracy = 1;
}

/* Request an alarm notification (play sound) */
message AlarmNotification {

}

/* Request high-accuracy mode (device will honour this for specified time, e.g. 30 mins) */
message AccuracyNotification {
  LocationAccuracyRequest request_accuracy = 1;
}

message Notification {
  oneof message {
    LocationNotification trigger_location = 1;
    AlarmNotification trigger_alarm = 2;
    AccuracyNotification set_accuracy = 3;
  }
}